# hello-rustee

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ta.lds  uuid.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
REE/lib/src/: lib.rs  logic.rs
hello-rustee/: Cargo.toml  build.rs
hello-rustee/src/: host.rs  lib.rs  ta.rs
hello-rustee/src/rust_backup/: Cargo.toml
host/: Cargo.toml  Makefile
host/src/: main.rs
host_app/: Cargo.toml
host_app/src/: lib.rs
optee-common/: Cargo.toml
optee-common/src/: lib.rs  tee_error.rs
remote-signer/: Cargo.toml
remote-signer/src/: host.rs  lib.rs  ta.rs
remote-signing-request/: Cargo.toml
remote-signing-request/src/: main.rs
src/: Makefile
src/host/: Makefile  appmain.c  main.c
src/rust/: .gitignore  Cargo.toml  README.md
src/rust/.cargo/: config
src/rust/host/: Cargo.toml
src/rust/host/include/: librustee_host.h
src/rust/host/src/: lib.rs  optee_handler.rs
src/rust/host_app/: Cargo.toml
src/rust/host_app/src/: lib.rs
src/rust/optee-common/: Cargo.toml
src/rust/optee-common/src/: ffi_str.rs  lib.rs  operation.rs
src/rust/ta/: Cargo.toml
src/rust/ta/include/: librustee_ta.h
src/rust/ta/src/: lib.rs  optee.rs
src/rust/ta_app/: Cargo.toml
src/rust/ta_app/src/: lib.rs
src/rust/zkms-common/: Cargo.toml
src/rust/zkms-common/src/: jsonrpc_request.rs  lib.rs  transferable_transcript.rs  utils.rs
src/rust/zkms-keystore/: Cargo.toml
src/rust/zkms-keystore/src/: keystore.rs  lib.rs
src/rust/zkms-server/: Cargo.toml  wasm_runtime.wasm
src/rust/zkms-server/src/: config.rs  error.rs  lib.rs  local_handler.rs  server.rs  types.rs  wasm_executor.rs
src/rust/zondee/: Cargo.toml
src/rust/zondee-teec/src/wrapper/: connection.rs  param.rs  teec.rs
src/rust/zondee-utee/: Cargo.toml  build.rs
src/rust/zondee-utee/src/: lib.rs  wrapper.rs
src/rust/zondee-utee/src/wrapper/: error.rs  params.rs  rand.rs  storage.rs  trace.rs  user_ta_header.rs  utee.rs
src/scripts/: inittab  launch_qemu.sh  qemu_entrypoint.sh  run_app.sh
src/ta/: Makefile  rustee_ta.c  sub.mk  user_ta_header_defines.h
src/ta/include/: rustee_ta.h
ta/: Cargo.toml  Makefile  ta_aarch64.lds
ta/src/: main.rs
zkms-common/proto/: zkms.proto
zondee/: Cargo.toml  build.rs
zondee-macros/: Cargo.toml  README.md
zondee-macros/src/: framework.rs  lib.rs  wrapper.rs
zondee-macros/src/wrapper/: os_params.rs  os_workflow.rs  utee_workflow.rs
zondee-teec/: Cargo.toml  build.rs
zondee-teec/src/: error.rs  framework.rs  lib.rs  wrapper.rs
zondee-teec/src/framework/: client.rs
zondee-teec/src/wrapper/: operation.rs  raw.rs  teec.rs
zondee-utee/: Cargo.toml  README.md
zondee-utee/src/: framework.rs  lib.rs  wrapper.rs
zondee-utee/src/wrapper/: error.rs  params.rs  raw.rs  trace.rs  user_ta_header.rs
zondee/src/: array.rs  framework.rs  lib.rs  stack_str.rs  stack_vec.rs  utils.rs  uuid.rs  wrapper.rs
zondee/src/framework/: client.rs  utils.rs
zondee/src/wrapper/: os.rs
zondee/src/wrapper/client/: operation.rs  param.rs  raw.rs  uuid.rs
zondee/src/wrapper/os/: params.rs  raw.rs  trace.rs  user_ta_header.rs  uuid.rs
