[profile.dev]
codegen-units = 1
panic = "abort"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false

[profile.test]
codegen-units = 1
panic = "abort"

[workspace]
members = [
    "hello-rustee",
    "remote-signer",
    "zondee-macros",
    "zondee-teec",
    "zondee-utee",
    "zondee",
]
