[[bin]]
name = "hello_rustee_host"
path = "src/host.rs"

[[bin]]
name = "hello_rustee_ta"
path = "src/ta.rs"

[dependencies]
heapless = { default-features = false, features = ["serde"], version = "0.5" }
libc = { default-features = false, version = "0.2" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
zondee = { features = ["with-serde", "with-serde_cbor"], path = "../zondee" }
zondee-teec = { features = ["framework"], path = "../zondee-teec" }
zondee-utee = { features = ["framework"], path = "../zondee-utee" }

[lib]
name = "hello_rustee"
path = "src/lib.rs"

[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"
name = "hello_rustee"
readme = "README.md"
version = "0.1.0"
