[dependencies]
gumdrop = { default-features = false, version = "0.7" }
serde = { default-features = false, version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
rand = "0.7.3"
zkms-common = {version = "0.1.0", path = "../zkms-common"}

[lib]
name = "zkms_server"
path = "src/lib.rs"
crate-type = ["rlib"]

[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
description = "Provides useful CLI commands to manage zkms servers"
edition = "2018"
license = "Apache-2.0"
name = "host-app"
readme = "README.md"
repository = "https://github.com/Zondax/zkms-poc"
version = "0.1.0"
