[dependencies]
heapless = { default-features = false, features = ["serde"], version = "0.5" }
libc = { default-features = false, version = "0.2" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
zondee = { path = "../zondee" }
zondee-utee = { features = ["with-zondee-macros"], path = "../zondee-utee" }
zondee-macros = {path = "../zondee-macros"}
optee-common = {path = "../optee-common"}

[build_dependencies]
uuid = { version = "0.7", features = ["v4"] }

[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"
name = "hello_rustee_ta"
readme = "README.md"
version = "0.1.0"
build = "build.rs"
