[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[dependencies]
bincode = "1.3.1"                                                                                                                                                        
serde = { default-features = false, version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.41"
parking_lot = "0.11.0"
hex = "0.4.2"
libc = "0.2.80"

zkms-common = { path = "../zkms-common", version = "0.1.0" }
zkms_server = { package = "zkms-server", path = "../zkms-server", version = "0.1.0" }
optee_common = {package = "optee-common", path = "../optee-common", version = "0.1.0", default-features = false}

[dependencies.optee-teec]
version = "0.1.0"
git = "https://github.com/sccommunity/rust-optee-trustzone-sdk.git"
commit = "c279c1b7812fb32939bacb1a995232d4eb8ea424"

