[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.41"
parking_lot = "0.11.0"
hex = "0.4.2"
libc = "0.2.80"

zkms-common = { path = "../zkms-common", version = "0.1.0" }
host_app = { package = "host-app", path = "../host_app", version = "0.1.0" }
optee_common = {package = "optee-common", path = "../optee-common", version = "0.1.0"}
zondee_teec = {package = "zondee-teec", path = "../zondee-teec", version = "0.1.0"}
