[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_ta"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rustee_ta"
crate-type = ["staticlib"]

[profile.release]
lto=true
codegen-units = 1
debug=true
opt-level = "z"
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
wee_alloc = {version = "0.4.5", defaul-features = false, features = ["static_array_backend", "size_classes"]}
hex = {version = "0.4.2", default-features = false}
optee_common = {package = "optee-common", path = "../optee-common", version = "0.1.0"}
zondee_utee = {package = "zondee-utee", path = "../zondee-utee", version = "0.1.0"}
arrayvec = {default-features = false, version = "0.5.2"}
ta_app = {path = "../ta_app"}

[target.armv7-unknown-linux-gnueabihf.dev-dependencies]
panic-halt = "0.2.0"

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["getrandom"]

[dependencies.rand_core]
version = "0.5.1"
default-features = false

[dev-dependencies.log]
version = "0.4.11"

[dev-dependencies.simple_logger]
version = "1.11.0"
