[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_ta"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rustee_ta"
crate-type = ["staticlib"]

[dependencies]
optee_common = { package = "optee-common", path = "../optee-common", version = "0.1.0" }
zondee_utee = { package = "zondee-utee", path = "../zondee-utee", version = "0.1.0" }
arrayvec = { default-features = false, version = "0.5.2"}
ta_app = { path = "../ta_app" }
log = "0.4"

[target.armv7-unknown-linux-gnueabihf.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
simple_logger = "1.11"
