[build-dependencies]

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_cbor = { version = "0.11" }
futures = { version = "0.3.5", package = "futures", features = ["compat"] }


[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
description = "Common definitions for zkms-client and zkms-server"
edition = "2018"
license = "Apache-2.0"
name = "zkms-common"
readme = "README.md"
repository = "https://github.com/Zondax/zkms-poc"
version = "0.1.0" 
