[dependencies]
gumdrop = { default-features = false, version = "0.7" }
serde = { default-features = false, version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
tokio = { features = ["full"], version = "0.2.22" }
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.2"
jsonrpc-core-client = "14.0"
jsonrpc-tcp-server = "14.2.0"

zkms-common = {version = "0.1.0", path = "../zkms-common"}

futures = { version = "0.3.5", package = "futures", features = ["compat"] }


[dev-dependencies]
once_cell = "1.2"
jsonrpc-test = "14.2.0"
serde_json = "1.0.57"


[lib]
name = "zkms_server"
path = "src/lib.rs"
crate-type = ["rlib"]

[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
description = "Provides useful CLI commands to manage zkms servers"
edition = "2018"
license = "Apache-2.0"
name = "zkms-server"
readme = "README.md"
repository = "https://github.com/Zondax/zkms-poc"
version = "0.1.0"
