[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "zondee-utee"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[features]
default = []
framework = ["zondee/with-serde_cbor", "zondee/with-serde", "with-zondee-macros", "zondee-macros/framework"]
with-zondee-macros = ["zondee-macros"]

[dependencies]
arrayvec = { default-features = false, version = "0.5.2" }
libc = { default-features = false, version = "0.2" }
zondee = { path = "../zondee", version = "0.1" }
zondee-macros = { optional = true, path = "../zondee-macros", version = "0.1" }
log = { version = "0.4", default-features = false }
